--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "browser-sync start --server --files . --host -- port 5000 --startPath doguitoCadastros/telas/lista_cliente.html"
   },
   "author": "",
   "license": "ISC",
